google token implementado

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceso denegado</title>
+    <title>Google sign in</title>
 </head>
+
 <body>
-    <h1>Acceso denegado</h1>
+
+    <h1>google sign in</h1>
+    <hr>
+    <div id="g_id_onload" data-client_id="1028069775807-bq70o7uqqoiej30s9puk9qvhfegnmdor.apps.googleusercontent.com" data-auto_prompt="false" data-callback="handleCredentialResponse">
+    </div>
+    <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with" data-shape="rectangular" data-logo_alignment="left">
+    </div>
+
+    <button id="google-sign-out">Sign out</button>
+
+
+
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script>
+        function handleCredentialResponse(response) {
+            // Google id token
+
+            const body = {
+                id_token: response.credential
+            };
+
+
+
+            fetch('http://localhost:8080/api/auth/google', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+
+                    },
+                    body: JSON.stringify(body)
+                })
+                .then(r => {
+                    const aux = r.json();
+                    return aux
+                }).then((resp) => {
+                    localStorage.setItem("correo", resp.usuario.correo)
+                })
+                .catch("warn", console.warn);
+        }
+
+
+        const button = document.getElementById('google-sign-out');
+        button.onclick = () => {
+            google.accounts.id.disableAutoSelect()
+
+            google.accounts.id.revoke(localStorage.getItem("correo"), done => {
+                localStorage.clear();
+                location.reload()
+            })
+        }
+    </script>
 </body>
+
 </html>
