--- a/public/index.html
+++ b/public/index.html
@@ -26,13 +26,15 @@
         function handleCredentialResponse(response) {
             // Google id token
 
+            var url = (window.location.hostname.includes('localhost')) ? 'http://localhost:8080/' : 'https://cursonode-aragon.herokuapp.com/';
+
             const body = {
                 id_token: response.credential
             };
 
 
 
-            fetch('http://localhost:8080/api/auth/google', {
+            fetch(url, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
